k8s/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: miso-db
spec:
  ports:
  - port: 5432
  selector:
    app: miso-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miso-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miso-db
  template:
    metadata:
      labels:
        app: miso-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
