k8s/base/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: miso-redis
spec:
  ports:
  - port: 6379
  selector:
    app: miso-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miso-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miso-redis
  template:
    metadata:
      labels:
        app: miso-redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
