k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miso-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - api.stemcultivation.com
    secretName: miso-tls-secret
  rules:
  - host: api.stemcultivation.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miso-brain
            port:
              number: 80
